# mycobot_communications

./: .gitignore  .gitmodules  Dockerfile  Dockerfile-humble  Dockerfile-noetic  README-dev.md  README.md
mycobot_interface/: CMakeLists.txt  package.xml
mycobot_interface/launch/: communication_service.launch  communication_topic.launch
mycobot_interface/scripts/: mycobot_topics_sending.py  speed_tests.py
mycobot_interface_2/: package.xml  setup.cfg  setup.py
mycobot_interface_2/launch/: mycobot_comms_launch.py
mycobot_interface_2/mycobot_interface_2/: cobot_comms.py
mycobot_msgs/: CMakeLists.txt  package.xml
mycobot_msgs/msg/: MycobotGripperStatus.msg  MycobotPumpStatus.msg
mycobot_msgs_2/: CMakeLists.txt  package.xml
mycobot_msgs_2/msg/: MycobotAngles.msg  MycobotCoords.msg  MycobotGripperStatus.msg  MycobotPose.msg  MycobotPumpStatus.msg  MycobotSetAngles.msg  MycobotSetCoords.msg
setup_pi/: 10-my-network-config.yaml  README.md  fix-ubuntu-2004.sh  setup_pi.sh  setup_pi_1804.sh  setup_pi_2004.sh
useful_scripts/: concurrency_test.py  disable_servos.py  speed_tests.py
